unpackaged/objects/Cost_Revenue_Transaction__c.object
<CustomObject>
  <fields>
    <fullName>Account_Code__c</fullName>
    <label>Account Code</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Cost/Revenue Transactions</relationshipLabel>
    <relationshipName>Cost_Revenue_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>BE</fullName>
        </value>
        <value>
          <fullName>BY</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DK</fullName>
        </value>
        <value>
          <fullName>ES</fullName>
        </value>
        <value>
          <fullName>FI</fullName>
        </value>
        <value>
          <fullName>ID</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>KZ</fullName>
        </value>
        <value>
          <fullName>LU</fullName>
        </value>
        <value>
          <fullName>MY</fullName>
        </value>
        <value>
          <fullName>NL</fullName>
        </value>
        <value>
          <fullName>NO</fullName>
        </value>
        <value>
          <fullName>PH</fullName>
        </value>
        <value>
          <fullName>PL</fullName>
        </value>
        <value>
          <fullName>PT</fullName>
        </value>
        <value>
          <fullName>RU</fullName>
        </value>
        <value>
          <fullName>SE</fullName>
        </value>
        <value>
          <fullName>UA</fullName>
        </value>
        <value>
          <fullName>UK</fullName>
        </value>
        <value>
          <fullName>US</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>GDWUniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>GDW Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Project__c</fullName>
    <label>Project#</label>
    <length>15</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The supplier that this cost (or revenue is linked to)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost/Revenue Transactions</relationshipLabel>
    <relationshipName>Cost_Revenue_Transactions</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Transaction_In_My_Country__c</fullName>
    <description>This field is checked if the Transaction country is corresponding to the User Country abbreviation field on the user record</description>
    <formula>$User.User_Country_Abbreviation__c =  TEXT(Country__c)</formula>
    <inlineHelpText>This field is checked if the Transaction country is corresponding to the User Country abbreviation field on the user record</inlineHelpText>
    <label>Transaction In My Country?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Advertising</fullName>
        </value>
        <value>
          <fullName>Entertainment</fullName>
        </value>
        <value>
          <fullName>Equipment</fullName>
        </value>
        <value>
          <fullName>Food &amp; Beverage</fullName>
        </value>
        <value>
          <fullName>Gifts</fullName>
        </value>
        <value>
          <fullName>Honorarium</fullName>
        </value>
        <value>
          <fullName>Hotel &amp; Accommodation</fullName>
        </value>
        <value>
          <fullName>Mailing &amp; Printing</fullName>
        </value>
        <value>
          <fullName>Other/Uncategorized</fullName>
        </value>
        <value>
          <fullName>Participation Fees</fullName>
        </value>
        <value>
          <fullName>Speaker Travel</fullName>
        </value>
        <value>
          <fullName>Third Party Sponsorship</fullName>
        </value>
        <value>
          <fullName>Travel &amp; Transfer</fullName>
        </value>
        <value>
          <fullName>Venue Expenses</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Value__c</fullName>
    <description>The same field as Amount, but without Currency. Used in reports to avoid Currency changes</description>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Voucher_Text__c</fullName>
    <label>Voucher Text</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <label>Cost/Revenue Transaction</label>
  <nameField>
    <label>Cost/Revenue Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Cost/Revenue Transactions</pluralLabel>
  <recordTypes>
    <active>true</active>
    <fullName>Integrated_Transaction</fullName>
    <label>Integrated Transaction</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Manual_Transaction</fullName>
    <label>Manual Transaction</label>
  </recordTypes>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>